--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: fintech-api
+  name: fintech-metrics
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: fintech
+      app: fintech-metrics
   template:
     metadata:
       labels:
-        app: fintech
+        app: fintech-metrics
       annotations:
         prometheus.io/scrape: "true"
-        prometheus.io/port: "9090"
+        prometheus.io/port: "8086"
         prometheus.io/path: "/metrics"
     spec:
       containers:
-      - name: fintech
-        image: akhil774/fintech:latest
+      - name: fintech-metrics
+        image: akhil774/fintech-metrics:latest
         ports:
-        - containerPort: 9090
+        - containerPort: 8086
         resources:
           limits:
             cpu: "500m"
@@ -31,24 +31,24 @@ spec:
         livenessProbe:
           httpGet:
             path: /health
-            port: 9090
+            port: 8086
           initialDelaySeconds: 5
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /health
-            port: 9090
+            port: 8086
           initialDelaySeconds: 3
           periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: fintech-service
+  name: fintech-metrics-service
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
-    app: fintech
+    app: fintech-metrics
   ports:
-  - port: 9090
-    targetPort: 9090
+  - port: 8087
+    targetPort: 8086
